# humanoid_ws1

./: sentiment_classification_using_embeddings.ipynb
.catkin_tools/profiles/default/: build.yaml  devel_collisions.txt
devel/: .catkin  .rosinstall  setup.sh
devel/include/ainex_interfaces/: ColorDetect.h  ColorsDetect.h  FingerPosition.h  GetWalkingParam.h  GetWalkingParamRequest.h  GetWalkingParamResponse.h  GetWalkingState.h  GetWalkingStateRequest.h  GetWalkingStateResponse.h  LineROI.h  ObjectInfo.h  ObjectsInfo.h  PixelPosition.h  RGB.h  ROI.h  SetFloat.h  SetFloatRequest.h  SetFloatResponse.h  SetPoint.h  SetPointRequest.h  SetPointResponse.h  SetRGB.h  SetRGBRequest.h  SetRGBResponse.h  SetString.h  SetStringRequest.h  SetStringResponse.h  SetWalkingCommand.h  SetWalkingCommandRequest.h  SetWalkingCommandResponse.h  SetWalkingParam.h  SetWalkingParamRequest.h  SetWalkingParamResponse.h  WalkingParam.h
devel/include/ros_robot_controller/: BusServoPosition.h  BusServoState.h  ButtonState.h  BuzzerState.h  GetBusServoCmd.h  GetBusServoState.h  GetBusServoStateRequest.h  GetBusServoStateResponse.h  GetBusServosPosition.h  GetBusServosPositionRequest.h  GetPWMServoCmd.h  Sbus.h  (+14 more)
src/ainex_interfaces/: CMakeLists.txt
src/kick_ball/: CMakeLists.txt  setup.py
src/kick_ball/config/: improvised_kicking_params.yaml  kick_ball_params.yaml
src/kick_ball/launch/: improvised_kicking.launch  kick_ball.launch
src/kick_ball/scripts/: improvised_kicking.py
src/walk_demo/: CMakeLists.txt
src/walk_demo/launch/: walk_demo.launch
src/walk_demo/scripts/: walking.py
(+255 files in other folders)
